--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyFin v2</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
@@ -12,5 +13,6 @@
         <div class="pannel"></div>
     </div>
 
+    <script src="scripts/script.js"></script>
 </body>
 </html>
